Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133033

QMediaPlayer may crash during shutdown

    XMLWordPrintable

Details

    • Android, Windows
    • 3a8516ecd (dev), a62c07c70 (dev), 6edbf2aeb (6.9), d3cb7bfd2 (6.8), 246439e62 (6.9), aa9df6896 (6.8)
    • Multimedia wk 51-2, Multimedia wk 5-6, Multimedia wk 7-8, Multimedia, weeks 9-10

    Description

      See NEW! - Flaky/Crashed/Failed Tests - Coin - Dashboards - Grafana. The test started failing 18. December 2024

      Difficult to reproduce. Can happen when very quickly starting an application that uses QMediaPlayer, and then closing the application at the same time as the first frame is being displayed.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              johanseg Jøger Hansegård
              johanseg Jøger Hansegård
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: