Set QVideoSink's QRhi to nullptr on QQuickWindow::sceneGraphInvalidated

This patch resets QVideoSink's QRhi instance to nullptr when
QQuickWindow's scene graph is invalidated. This prevents accessing a
potentially destroyed QRhi instance from the Qt Multimedia
implementation.

In addition, it fixes a potential race condition in
QFFmpegVideoSink::m_rhi by synchroning access to the member variable
from the renderer thread and the media player's presenter thread.

Together this prevents Quick applications from crashing during shutdown
or when setting up and tearing down the media player in rapid
succession.

Fixes: QTBUG-133033
Pick-to: 6.8 6.9
Change-Id: Ief03b7ec4b5a8914a797309460ab12ab6fab3118
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>